# synhx-client

./: .astylerc  .clang-format  .gitignore  AGENTS.md  CHANGES  Makefile.in  README  acconfig.h  basename.c  berw.h  cicn.c  cicn.h  cipher.c  cipher.h  cipher_openssl.h  compress.c  compress.h  config.h.in  configure  configure.in  decode.c  fd.c  getopt.h  getopt1_r.c  getopt_r.c  gtk_hlist.c  gtk_hlist.h  gtkconf  hal.c  haval.c  haval.h  hfs.c  hfs.h  history.c  history.h  hlclient.c  hlwrite.c  hmac.c  hotline.h  hx.h  (+29 more)
.github/workflows/: release.yml
docs/: AstyleUsage.md  release-workflow.md  user_manual.md
info/: ToDoList
